Update BanqueItemGUI.java