@@ -5,16 +5,13 @@ import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BanqueItemGUI {
 
-    private static final List<String> ITEMS = Arrays.asList(
-            "netherite", "emerald", "diamond",
-            "gold", "iron", "copper",
-            "redstone", "lapis", "coal",
-            "quartz", "glowstone", "amethyst"
+    private static final List<String> ITEMS = List.of(
+            "netherite","emerald","diamond","gold","iron","copper",
+            "redstone","lapis","coal","quartz","glowstone","amethyst"
     );
 
     public static void open(Player p) {
@@ -23,28 +20,40 @@ public class BanqueItemGUI {
 
         Inventory inv = Bukkit.createInventory(null, 54, "§6⚙ Items Économie");
 
-        int slot = 0;
+        int row = 0;
 
         for (String item : ITEMS) {
 
-            Material mat = getMaterial(item);
+            int base = row * 9;
 
             double boost = cfg.getDouble("rarity_settings." + item + ".boost");
+            double exp = cfg.getDouble("rarity_settings." + item + ".exponent");
+            double max = cfg.getDouble("rarity_settings." + item + ".max_boost");
 
-            // ➖
-            SafeGUI.safeSet(inv, slot, SafeGUI.item(Material.RED_STAINED_GLASS_PANE,
-                    "§c- " + item));
+            Material mat = getMaterial(item);
 
-            // 📄
-            SafeGUI.safeSet(inv, slot + 1, SafeGUI.item(mat,
-                    "§e" + item,
-                    "§7Boost: §a" + boost));
+            // ===== BOOST =====
+            SafeGUI.safeSet(inv, base, SafeGUI.item(Material.RED_STAINED_GLASS_PANE, "§c- Boost"));
+            SafeGUI.safeSet(inv, base+1, SafeGUI.item(mat, "§e" + item,
+                    "§7Boost: §a" + boost,
+                    "§7Exp: §b" + exp,
+                    "§7Max: §6" + max));
+            SafeGUI.safeSet(inv, base+2, SafeGUI.item(Material.LIME_STAINED_GLASS_PANE, "§a+ Boost"));
 
-            // ➕
-            SafeGUI.safeSet(inv, slot + 2, SafeGUI.item(Material.LIME_STAINED_GLASS_PANE,
-                    "§a+ " + item));
+            // ===== EXP =====
+            SafeGUI.safeSet(inv, base+3, SafeGUI.item(Material.RED_STAINED_GLASS_PANE, "§c- Exp"));
+            SafeGUI.safeSet(inv, base+4, SafeGUI.item(Material.PAPER, "§bExponent",
+                    "§7Valeur: §b" + exp));
+            SafeGUI.safeSet(inv, base+5, SafeGUI.item(Material.LIME_STAINED_GLASS_PANE, "§a+ Exp"));
 
-            slot += 3;
+            // ===== MAX =====
+            SafeGUI.safeSet(inv, base+6, SafeGUI.item(Material.RED_STAINED_GLASS_PANE, "§c- Max"));
+            SafeGUI.safeSet(inv, base+7, SafeGUI.item(Material.GOLD_INGOT, "§6Max Boost",
+                    "§7Valeur: §6" + max));
+            SafeGUI.safeSet(inv, base+8, SafeGUI.item(Material.LIME_STAINED_GLASS_PANE, "§a+ Max"));
+
+            row++;
+            if (row >= 6) break;
         }
 
         p.openInventory(inv);
@@ -66,11 +75,5 @@ public class BanqueItemGUI {
             case "amethyst" -> Material.AMETHYST_SHARD;
             default -> Material.STONE;
         };
-    }
-
-    public static String getItemBySlot(int slot) {
-        int index = slot / 3;
-        if (index >= ITEMS.size()) return null;
-        return ITEMS.get(index);
     }
 }
